src/style/base.scss
html,
body {
  margin: 0px;
  width: 100vw;
  height: 100%;
  overflow-x: hidden;
}

* {
  box-sizing: border-box;
  text-decoration: none;
}

.app {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100vw;
  min-height: 100vh;
  background-color: $primaryDark;
  font-family: "Roboto", sans-serif;
}

.app-wrapper {
  background-color: $primaryLight;
}

